--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 <body>
     <h1>Welcome to my website</h1>
     <p>Here is my latest masterpiece:</p>
-    <img src="images/20180525_rose.jpg">
+    <img src="images/20180525_rose_small.jpg">
 </body>
 </html
